chore: modify PurgeTest